update app to include Capybara and to have post functionality.

--- a/views/input.erb
+++ b/views/input.erb
@@ -1,6 +1,6 @@
 <h1>Sound like a L337 H4CK3R in seconds!</h1>
 
-<form action="/output">
+<form action="/output" method="post">
   <div class="form-group">
     <label for="length">Sentence to translate:</label>
     <input id="sentence" name="sentence" class="form-control" type="text">
